Update Footer and Home page layout for improved spacing and visual consistency; add favicon to index.html

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brewinx-–-the-coffee-ritual",
+  "name": "brewinx-the-coffee-ritual",
   "private": true,
   "version": "0.0.0",
   "type": "module",
